welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: type mismatch;
 found   : Unit
 required: Int
	} else if ((!( 10<=a && a<=20 ))&& ( 10<=b && b<=20 ) ){
               ^