welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
	if (( 10<=a && a<=20 )&& ( 10<=b && b<=20 ) ){
		return Math.max(a,b)
	} else if (( 10<=a && a<=20 )&& !(( 10<=b && b<=20 )) ){
		return a
	} else if ((!( 10<=a && a<=20 ))&& ( 10<=b && b<=20 ) ){
		return b
}
}
